testsuite/poke.pkl/gt-offsets-diag-1.pk
/* { dg-do compile } */

var a =
  2#B > Exception {}; /* { dg-error "invalid operand.*\n.*expected offset" } */
